--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Smart Recipe Finder</title>
+<title>Interactive Recipe Finder</title>
 <style>
 :root {
   --bg: #f6f9fc;
@@ -109,8 +109,10 @@ summary {
 .search-bar input {
   padding: 10px;
   width: 60%;
-  border: 1px solid #ccc;
+  border: 1px solid grey;
   border-radius: 5px 0 0 5px;
+  background: var(--search-bg); 
+  color: var(--search-text);
 }
 
 .search-bar button {
@@ -193,16 +195,16 @@ summary {
 </style>
 </head>
 <body data-theme="light">
-<button class="theme-toggle" onclick="toggleTheme()">Toggle Dark Mode</button>
+<button class="theme-toggle" onclick="toggleTheme()">☀️/🌙</button>
 
 <header>
-  <h1>🍴 Smart Recipe Finder</h1>
+  <h1>🍴 Interactive Recipe Finder</h1>
   <p>Find recipes based on ingredients, cuisine, diet & more</p>
 </header>
 
 <div class="search-bar">
   <input type="text" id="searchInput" placeholder="Search recipes or ingredients...">
-  <button onclick="searchRecipes()">Search</button>
+  <button id="searchButton" onclick="searchRecipes()">Search</button>
 </div>
 
 <div class="container">
@@ -349,4 +351,3 @@ fetchAllMeals();
 </script>
 </body>
 </html>
-
